--- a/app/src/main/res/menu/menu_resumen.xml
+++ b/app/src/main/res/menu/menu_resumen.xml
@@ -2,19 +2,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.balta.atested.ResumenActivity">
+
+    <item android:id="@+id/action_listado"
+        android:title="@string/action_listado"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
+    <item android:id="@+id/action_configuracion"
+        android:title="@string/action_configuracion"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
-
-    <item android:id="@+id/action_nuevo"
-        android:title="@string/action_nuevo"
+        android:id="@+id/action_acercade"
+        android:title="@string/action_acercade"
         android:orderInCategory="100"
         app:showAsAction="never" />
-
-    <item android:id="@+id/action_buscar"
-        android:title="@string/action_buscar"
-        android:orderInCategory="100"
-        app:showAsAction="ifRoom" />
 </menu>
