--- a/app/src/main/res/layout/content_anyadir.xml
+++ b/app/src/main/res/layout/content_anyadir.xml
@@ -84,9 +84,9 @@
         android:id="@+id/buttonGuardar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginStart="33dp"
+        android:layout_marginTop="25dp"
         android:text="Guardar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextIncorrecta3" />
+        app:layout_constraintStart_toEndOf="@+id/editTextEnunciado"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
