Mostrar preguntas en ListadoPreguntas (Creando preguntas dentro de la clase)

--- a/app/src/main/res/layout/content_listado.xml
+++ b/app/src/main/res/layout/content_listado.xml
@@ -9,7 +9,7 @@
     tools:showIn="@layout/activity_listado">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewNoPreguntas"
         android:layout_width="wrap_content"
         android:layout_height="23dp"
         android:layout_marginStart="20dp"
@@ -17,5 +17,11 @@
         android:text="Aun no se han implementado los listados de preguntas"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
 
 </android.support.constraint.ConstraintLayout>
