--- a/app/src/main/res/layout/content_resumen.xml
+++ b/app/src/main/res/layout/content_resumen.xml
@@ -25,7 +25,7 @@
                 android:layout_marginStart="14dp"
                 android:layout_marginTop="59dp"
                 android:layout_marginBottom="10dp"
-                android:text="Preguntas Disponibles:"
+                android:text="@string/preguntas_disponibles"
                 app:layout_constraintBottom_toTopOf="@+id/enunciado2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -37,7 +37,7 @@
                 android:layout_marginStart="14dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:text="Categorias Disponibles:"
+                android:text="@string/categorias_disponibles"
                 app:layout_constraintBottom_toTopOf="@+id/enunciado3"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/enunciado1" />
@@ -49,7 +49,7 @@
                 android:layout_marginStart="14dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:text="Cuestionarios Realizados:"
+                android:text="@string/cuestionarios_realizados"
                 app:layout_constraintBottom_toTopOf="@+id/enunciado4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/enunciado2" />
@@ -61,7 +61,7 @@
                 android:layout_marginStart="14dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="348dp"
-                android:text="Calificación Media:"
+                android:text="@string/calificaci_n_media"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/enunciado3" />
@@ -85,7 +85,7 @@
                 android:id="@+id/contador1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:text="@string/_0"
                 tools:layout_editor_absoluteX="323dp"
                 tools:layout_editor_absoluteY="59dp" />
 
@@ -97,7 +97,7 @@
                 android:id="@+id/contador2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:text="@string/_0"
                 tools:layout_editor_absoluteX="323dp"
                 tools:layout_editor_absoluteY="79dp" />
 
@@ -109,7 +109,7 @@
                 android:id="@+id/contador3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:text="@string/_0"
                 tools:layout_editor_absoluteX="323dp"
                 tools:layout_editor_absoluteY="105dp" />
 
@@ -121,7 +121,7 @@
                 android:id="@+id/contador4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:text="@string/_0"
                 tools:layout_editor_absoluteX="323dp"
                 tools:layout_editor_absoluteY="132dp" />
 
