--- a/app/src/main/res/layout/content_resumen.xml
+++ b/app/src/main/res/layout/content_resumen.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ResumenActivity"
-    tools:showIn="@layout/activity_resumen">
+    tools:showIn="@layout/activity_resumen"
+    android:background="@color/fondo">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,6 +28,7 @@
                 android:layout_marginTop="59dp"
                 android:layout_marginBottom="10dp"
                 android:text="@string/preguntas_disponibles"
+                android:textColor="@color/fuente"
                 app:layout_constraintBottom_toTopOf="@+id/enunciado2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -38,6 +41,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:text="@string/categorias_disponibles"
+                android:textColor="@color/fuente"
                 app:layout_constraintBottom_toTopOf="@+id/enunciado3"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/enunciado1" />
@@ -50,6 +54,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:text="@string/cuestionarios_realizados"
+                android:textColor="@color/fuente"
                 app:layout_constraintBottom_toTopOf="@+id/enunciado4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/enunciado2" />
@@ -62,6 +67,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="348dp"
                 android:text="@string/calificaci_n_media"
+                android:textColor="@color/fuente"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/enunciado3" />
@@ -86,6 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/_0"
+                android:textColor="@color/fuente"
                 tools:layout_editor_absoluteX="323dp"
                 tools:layout_editor_absoluteY="59dp" />
 
@@ -98,6 +105,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/_0"
+                android:textColor="@color/fuente"
                 tools:layout_editor_absoluteX="323dp"
                 tools:layout_editor_absoluteY="79dp" />
 
@@ -110,6 +118,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/_0"
+                android:textColor="@color/fuente"
                 tools:layout_editor_absoluteX="323dp"
                 tools:layout_editor_absoluteY="105dp" />
 
@@ -122,6 +131,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/_0"
+                android:textColor="@color/fuente"
                 tools:layout_editor_absoluteX="323dp"
                 tools:layout_editor_absoluteY="132dp" />
 
