--- a/app/src/main/res/layout/activity_acerca.xml
+++ b/app/src/main/res/layout/activity_acerca.xml
@@ -4,15 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
     android:orientation="vertical"
     tools:context=".AcercaActivity">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="159dp"
-        android:layout_marginTop="28dp"
-        app:cardBackgroundColor="@color/fondo">
+        android:layout_marginTop="28dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,7 +24,6 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="38dp"
                 android:text="@string/AcercaDeTitulo"
-                android:textColor="@color/fuente"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,8 +33,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="32dp"
-                android:text="@string/twitter"
-                android:textColor="@color/fuente"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -47,7 +42,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:text="@string/instagram"
-                android:textColor="@color/fuente"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView2" />
         </LinearLayout>
