--- a/app/src/main/res/layout/content_listado.xml
+++ b/app/src/main/res/layout/content_listado.xml
@@ -15,16 +15,13 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="60dp"
         android:text="@string/noImplementado"
-        android:textColor="@color/fuente"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/background"
-            android:textColor="@color/fuente"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
 </android.support.constraint.ConstraintLayout>
