--- a/app/src/main/res/layout/content_anyadir.xml
+++ b/app/src/main/res/layout/content_anyadir.xml
@@ -97,4 +97,36 @@
         android:text="@string/AnyadirModCat"
         app:layout_constraintStart_toEndOf="@+id/spinnerCategoria"
         app:layout_constraintTop_toBottomOf="@+id/editTextEnunciado" />
+
+    <Button
+        android:id="@+id/buttonGallery"
+        android:layout_width="214dp"
+        android:layout_height="41dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="59dp"
+        android:text="@string/from_gallery"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/buttonCamera"
+        android:layout_width="214dp"
+        android:layout_height="38dp"
+        android:layout_marginEnd="7dp"
+        android:layout_marginBottom="4dp"
+        android:text="@string/from_camera"
+        app:layout_constraintBottom_toTopOf="@+id/buttonGallery"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="92dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginBottom="52dp"
+        android:src="@drawable/icon_image"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
 </android.support.constraint.ConstraintLayout>
