--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:paddingBottom="@dimen/activity_vertical_margin"
@@ -30,6 +32,16 @@ android:paddingTop="@dimen/activity_vertical_margin">
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/TextView_enunciado"/>
+
+        <ImageView
+            android:id="@+id/imageViewListado"
+            android:layout_width="75dp"
+            android:layout_height="69dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="0dp"
+            android:src="@drawable/icon_image"
+            android:background="@drawable/icon_image"/>
 
     </RelativeLayout>
 
