--- a/app/src/main/res/layout/content_acerca_de.xml
+++ b/app/src/main/res/layout/content_acerca_de.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".AcercaActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".AcercaDeActivity"
+    tools:showIn="@layout/activity_acerca_de">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="159dp"
-        android:layout_marginTop="28dp">
+        android:layout_height="159dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -52,19 +53,52 @@
         android:id="@+id/imageView"
         android:layout_width="92dp"
         android:layout_height="90dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginBottom="52dp"
-        android:src="@drawable/icon_image"
+        android:layout_marginStart="148dp"
+        android:layout_marginBottom="144dp"
         android:background="@drawable/icon_image"
+        android:src="@drawable/icon_image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+    <Button
+        android:id="@+id/buttonArriba"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_menu_add" />
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="19dp"
+        android:text="Arriba"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/buttonDerecha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="145dp"
+        android:layout_marginEnd="17dp"
+        android:text="Derecha"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+
+    <Button
+        android:id="@+id/buttonIzquierda"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="145dp"
+        android:text="Izquierda"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+
+    <Button
+        android:id="@+id/buttonAbajo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="148dp"
+        android:layout_marginBottom="37dp"
+        android:text="Abajo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+</android.support.constraint.ConstraintLayout>
